Change layout view and add CRUD actions  articles for admin namespace

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -39,6 +39,7 @@ en:
   log_out: "Log out"
   change_password: "Change password"
   view_profile: "View profile"
+  articles: "Articles"
   activerecord:
     attributes:
       user:
