--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -37,6 +37,9 @@ en:
   sign_up: "Sign up"
   log_in: "Log in"
   log_out: "Log out"
+  first_name: "First name"
+  last_name: "Last name"
+  email: "email"
   change_password: "Change password"
   view_profile: "View profile"
   articles: "Articles"
