--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -37,6 +37,7 @@ en:
   sign_up: "Sign up"
   log_in: "Log in"
   log_out: "Log out"
+  update: "Update"
   first_name: "First name"
   last_name: "Last name"
   email: "email"
